--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "setup-production": "npm install",
     "start": "node server.js"
   },
   "engines": {
-    "node": "16.x"
+    "node": "19.x"
   },
   "keywords": [],
   "author": "",
